--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
   function handleSignUp() {
     // Code to handle sign up logic
+    //hello
     alert('Thank you for signing up!');
   }
 </script>
