--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </div>
 
 <script>
+  //first commit
   // JavaScript goes here
   // For example, to handle a sign-up form submission:
   document.addEventListener('DOMContentLoaded', function() {
@@ -66,10 +67,8 @@
 
   function handleSignUp() {
     // Code to handle sign up logic
-    //hello
     alert('Thank you for signing up!');
   }
 </script>
-
 </body>
 </html>
